src/objects/DASR_Request__c.object
<CustomObject>
    <description>Junction object with many to many relationship between Contract and LDC Account to support communication with the utility.</description>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>This field is created for handling Utlity Initiated Changes</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <description>Rate Ready
DUAL</description>
        <label>Bill Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Ready</fullName>
                </value>
                <value>
                    <fullName>DUAL</fullName>
                </value>
                <value>
                    <fullName>Rate Ready</fullName>
                </value>
                <value>
                    <fullName>SBO/ESP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Entity__c</fullName>
        <label>Billing Entity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CP_Node__c</fullName>
        <description>This field is created during the iAve conversion.</description>
        <label>CP Node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Obligation__c</fullName>
        <label>Capacity Obligation Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Effective_Date__c</fullName>
        <label>Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Reason_Code__c</fullName>
        <label>Change Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Reason_Value__c</fullName>
        <label>Change Reason Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Change_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Rate Ready LDC</fullName>
                </value>
                <value>
                    <fullName>Bill Ready LDC</fullName>
                </value>
                <value>
                    <fullName>Separate Bills</fullName>
                </value>
                <value>
                    <fullName>LDC Rate Codes specific to LDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Billing_Entity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Change Billing Type (Billing Option)</fullName>
                </value>
                <value>
                    <fullName>Change ESP Rate Code</fullName>
                </value>
                <value>
                    <fullName>Change Service Indicator (Summary or Detail Interval Data)</fullName>
                </value>
                <value>
                    <fullName>Change Aggregation Category</fullName>
                </value>
                <value>
                    <fullName>change Billing Type (Bill Presenter)</fullName>
                </value>
                <value>
                    <fullName>Change Consumers Tax Rate</fullName>
                </value>
                <value>
                    <fullName>Change E/M Fixed Charge</fullName>
                </value>
                <value>
                    <fullName>Change of ESP Rate Amount</fullName>
                </value>
                <value>
                    <fullName>Change Party that Calculates the Bill</fullName>
                </value>
                <value>
                    <fullName>Change ESP Account Number</fullName>
                </value>
                <value>
                    <fullName>Change of Interval Status</fullName>
                </value>
                <value>
                    <fullName>Change Percentage of Service Tax Exempt</fullName>
                </value>
                <value>
                    <fullName>Change Rate Ready ESP Bill Code</fullName>
                </value>
                <value>
                    <fullName>Change in Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Tax Exemption Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_BillMethod__c</fullName>
        <description>This field is created to store the bill method</description>
        <label>Contract Bill Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUAL</fullName>
                </value>
                <value>
                    <fullName>Rate Ready</fullName>
                </value>
                <value>
                    <fullName>Bill Ready</fullName>
                </value>
                <value>
                    <fullName>SBO/ESP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Bill_Method__c</fullName>
        <formula>TEXT(Contract__r.Bill_Method__c)</formula>
        <label>Contract Bill Method (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_CounterSigned_Date__c</fullName>
        <description>This field is created to store Contract Counter Signed Date</description>
        <label>Contract Counter Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Counter_Signed_Date__c</fullName>
        <formula>Contract__r.Contract_Counter_Signed_Date__c</formula>
        <label>Contract Counter Signed Date (old)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_EndDate__c</fullName>
        <description>This field is created to store the contract end date</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Contract__r.End_Date__c</formula>
        <label>Contract End Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_IntervalUsage__c</fullName>
        <description>This field is created to store the contract interval usage</description>
        <label>Contract Interval Usage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Interval_Usage__c</fullName>
        <formula>TEXT(Contract__r.Interval_Usage__c)</formula>
        <label>Contract Interval Usage (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_RateCode__c</fullName>
        <description>This field is created to store contract rate code</description>
        <label>Contract Rate Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Rate_Code__c</fullName>
        <formula>Contract__r.Rate_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Rate Code (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_StartDate__c</fullName>
        <description>This field is created to store the contract start date</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Contract__r.StartDate</formula>
        <label>Contract Start Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>DASR Requests</relationshipLabel>
        <relationshipName>DASR_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>This field is added to store the County information for PA</description>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <description>This field is to store the customer id</description>
        <label>Customer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <formula>LDC_Account__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Identification_Number__c</fullName>
        <description>This field is added to store the Customer_Identification_Number for PA</description>
        <label>Customer_Identification_Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DASR_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DASR Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DASR_Submit_Date__c</fullName>
        <label>DASR Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DASR_Type__c</fullName>
        <label>DASR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GAAC</fullName>
                </value>
                <value>
                    <fullName>GAAE</fullName>
                </value>
                <value>
                    <fullName>GAAH</fullName>
                </value>
                <value>
                    <fullName>GAAD</fullName>
                </value>
                <value>
                    <fullName>GAAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DROP_Transaction_Type__c</fullName>
        <label>DROP Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_between__c</fullName>
        <formula>Change_Effective_Date__c -  DATEVALUE(DASR_Submit_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drop_Date__c</fullName>
        <label>Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drop_Reason_Code__c</fullName>
        <label>Drop Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Reason_Description__c</fullName>
        <label>Drop Reason Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Reason__c</fullName>
        <label>Drop Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alleged Slam</fullName>
                </value>
                <value>
                    <fullName>Contract Expired</fullName>
                </value>
                <value>
                    <fullName>Customer Changed to another Service Provider</fullName>
                </value>
                <value>
                    <fullName>Customer Enrolled In An Arrearage Crediting Program - PAC</fullName>
                </value>
                <value>
                    <fullName>Customer Enrolled In Utility Percent of Income Payment Plan - PIPP</fullName>
                </value>
                <value>
                    <fullName>Customer is on Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Customer Moved</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Dropped by Customer Request</fullName>
                </value>
                <value>
                    <fullName>Government Aggregated customer has opted out</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Service Terminated at the ESP&apos;s Option</fullName>
                </value>
                <value>
                    <fullName>Service Terminated Or Customer dropped due to nonpayment</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Dropped - dropped by supplier for reasons other than nonpayment</fullName>
                </value>
                <value>
                    <fullName>PA-Dropped by Customer Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dynegy_Initiated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dynegy Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESB_Transaction_Id__c</fullName>
        <label>ESB Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESP_Account_Number__c</fullName>
        <label>ESP Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Load_Percentage__c</fullName>
        <description>This field is added to store the Eligible Load Percentage  for PA</description>
        <label>Eligible Load Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_Switch_Date__c</fullName>
        <description>This field is created during the iAve conversion</description>
        <label>Eligible Switch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Output_Rating__c</fullName>
        <description>This field is added to store the Equipment Output Rating for PA - PPL only</description>
        <label>Equipment Output Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type_Code__c</fullName>
        <label>Exception Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_18__c</fullName>
        <formula>UPPER(CASESAFEID(Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Send_Date__c</fullName>
        <description>Date to be sent to utility</description>
        <label>Integration Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In-Process</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Validation Failed</fullName>
                </value>
                <value>
                    <fullName>Waiting For Response</fullName>
                </value>
                <value>
                    <fullName>Manually Fulfilled</fullName>
                </value>
                <value>
                    <fullName>TEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interval_Level_Indicator__c</fullName>
        <description>This field is created during the iAve Conversion.</description>
        <label>Interval Level Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily AMI Data</fullName>
                </value>
                <value>
                    <fullName>Monthly AMI Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interval_Usage__c</fullName>
        <label>Interval Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interval</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_Account_Number__c</fullName>
        <label>LDC Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipName>DASRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDC_Bill_Cycle__c</fullName>
        <label>LDC Bill Cycle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Budget_Billing_Status__c</fullName>
        <description>This field is created during iAve Conversion.</description>
        <label>LDC Budget Billing Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_EDI_Update_Date__c</fullName>
        <label>Last EDI Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Transaction_Id__c</fullName>
        <label>Line Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Exception_Reason_Code__c</fullName>
        <label>Meter Exception Reason Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Exception_Reason_Description__c</fullName>
        <label>Meter Exception Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Exception_Type_Code__c</fullName>
        <label>Meter Exception Type Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Number__c</fullName>
        <label>Meter Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_GAAD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to Check whether the DASR is most recent one or not</description>
        <label>Most Recent DASR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Qualifier__c</fullName>
        <label>Name Qualifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Type__c</fullName>
        <description>This field is created during the iAve conversion for storing the net metering indicator.</description>
        <label>Net Meter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>BMG</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>IC</fullName>
                </value>
                <value>
                    <fullName>IF</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>IW</fullName>
                </value>
                <value>
                    <fullName>KQ</fullName>
                </value>
                <value>
                    <fullName>NM-BI</fullName>
                </value>
                <value>
                    <fullName>NM-GG</fullName>
                </value>
                <value>
                    <fullName>NM-GL</fullName>
                </value>
                <value>
                    <fullName>OF</fullName>
                </value>
                <value>
                    <fullName>OW</fullName>
                </value>
                <value>
                    <fullName>PG</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
                <value>
                    <fullName>XY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Customer_Indicator__c</fullName>
        <description>This field is created to capture the New_Customer_Indicator from GAAE response</description>
        <inlineHelpText>N=Not an Instant Connect / Y=Instant Connect</inlineHelpText>
        <label>New_Customer_Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Months_Usage_Quantity__c</fullName>
        <label>Number Of Months Usage Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFF_Cycle_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created during the iAve Conversion for the Off cycle Enrollments which would be done manually</description>
        <label>OFF Cycle Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_LDC_Account_Number__c</fullName>
        <label>Old LDC Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_DUNS__c</fullName>
        <description>Field to store the Origination DUNS</description>
        <label>Originating DUNS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Name__c</fullName>
        <description>This field is to store the originating name</description>
        <label>Originating Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_DUNS__c</fullName>
        <formula>LDC_Account__r.Account__r.Supplier__r.Supplier_DUNS__c</formula>
        <label>Originator DUNS (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Name__c</fullName>
        <formula>LDC_Account__r.Account__r.Supplier__r.Name</formula>
        <label>Originator Name (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POR_Group__c</fullName>
        <description>This field is created during the iAve conversion</description>
        <label>POR Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Interest_Percent__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field is added to store the Participating Interest Percent  for PA</description>
        <label>Participating Interest Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Arrangement_Code__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Payment Arrangement Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_Demand__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Peak Demand</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>This field is created while handling Utility Initiated Changes GAAC</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Zip__c</fullName>
        <label>Postal Code Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected_Desc__c</fullName>
        <label>Reason Rejected Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account not found or invalid</fullName>
                </value>
                <value>
                    <fullName>Action Code Invalid</fullName>
                </value>
                <value>
                    <fullName>Change reason missing or invalid</fullName>
                </value>
                <value>
                    <fullName>Customer is not the customer of the Requestor</fullName>
                </value>
                <value>
                    <fullName>Customer on Credit Hold</fullName>
                </value>
                <value>
                    <fullName>DUNS Number Invalid or Not Found</fullName>
                </value>
                <value>
                    <fullName>ESI ID/Account exists but not active</fullName>
                </value>
                <value>
                    <fullName>ESP acct invalid/missing</fullName>
                </value>
                <value>
                    <fullName>Invalid Bill Type</fullName>
                </value>
                <value>
                    <fullName>Invalid Service Delivery Point Identifier</fullName>
                </value>
                <value>
                    <fullName>Invalid Source of Information/does not provide requested service</fullName>
                </value>
                <value>
                    <fullName>Maintenance Code Invalid</fullName>
                </value>
                <value>
                    <fullName>Meter Number Invalid or Not found</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Participating Interest Invalid</fullName>
                </value>
                <value>
                    <fullName>Requested Rate Not Found</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>A91</fullName>
                </value>
                <value>
                    <fullName>ANE</fullName>
                </value>
                <value>
                    <fullName>ANL</fullName>
                </value>
                <value>
                    <fullName>ANQ</fullName>
                </value>
                <value>
                    <fullName>APA</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>B33</fullName>
                </value>
                <value>
                    <fullName>CAP</fullName>
                </value>
                <value>
                    <fullName>CMP</fullName>
                </value>
                <value>
                    <fullName>D30</fullName>
                </value>
                <value>
                    <fullName>DIV</fullName>
                </value>
                <value>
                    <fullName>FRC</fullName>
                </value>
                <value>
                    <fullName>LSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecipientDUNS__c</fullName>
        <description>This field is created to store the Recipient DUNS</description>
        <label>Recipient DUNS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientName__c</fullName>
        <description>This field is created to store the Recipient Name</description>
        <label>Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_DUNS__c</fullName>
        <formula>LDC_Account__r.LDC_Vendor__r.DUNS__c</formula>
        <label>Recipient DUNS (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <formula>LDC_Account__r.LDC_Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Name (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sender_Transaction_Id__c</fullName>
        <label>Sender Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Point__c</fullName>
        <description>This field is created for the iAve Conversion</description>
        <label>Service Point</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Relationship__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Service Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Meter_Configuration__c</fullName>
        <description>This field is created to handle the net metering</description>
        <label>Special Meter Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>NETMETER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Point_Location_Code__c</fullName>
        <description>This field is created during the iAve conversion.</description>
        <label>Standard Point Location Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateMapPLI__c</fullName>
        <formula>IF(OR(ISPICKVAL(LDC_Account__r.Service_Territory__c, &apos;DEOHIO&apos;),ISPICKVAL(LDC_Account__r.Service_Territory__c, &apos;DAYTON&apos;), ISPICKVAL(LDC_Account__r.Service_Territory__c, &apos;AEPOHIO&apos;), ISPICKVAL(LDC_Account__r.Service_Territory__c, &apos;FEOHIO&apos;)) , &apos;OH&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StateMapPLI</label>
        <type>Text</type>
    </fields>
</CustomObject>